Corrected behavior of shift display in shift allocation, now only the days the shift falls on are active in the calendar.

--- a/app/assets/stylesheets/shifts.css
+++ b/app/assets/stylesheets/shifts.css
@@ -81,6 +81,10 @@
 	font-size: 10pt;
 	border: 1px solid black;
 }
+.void
+{
+	background-color: #777777;
+}
 .resident
 {
 	width: 85px;
